k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: school-sms
  labels:
    app.kubernetes.io/name: school-management-system
